feat ✨: Refatoração da estrutura da API e adição de versionamento
- Recursos movidos para pacotes versionados (V1 e V2).
- GreetingResource atualizado para lidar com caminhos versionados para usuários, eventos e inscrições.
- Classes V1Resource e V2Resource criadas para gerenciar as respectivas rotas da API.
- ApiKeyFilter e ApiKeyService implementados para autenticação de chave de API.
- EventoResource, InscricaoResource e UsuarioResource adicionados para a V1.
- Documentação do Swagger atualizada para refletir a nova estrutura e versionamento da API.
- Propriedades do aplicativo aprimoradas para configuração de chave de API.
